--- a/ansible/mac_arm64_setup.yml
+++ b/ansible/mac_arm64_setup.yml
@@ -8,12 +8,15 @@
       shell: |
         if ! command -v brew >/dev/null 2>&1; then
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          echo >> ~/.zprofile
+          echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> ~/.zprofile
+          eval "$(/opt/homebrew/bin/brew shellenv)"
         fi
       args:
         executable: /bin/bash
 
     - name: Run brew bundle
-      shell: brew bundle --file="~/dotfiles/mac/Brewfile"
+      shell: brew bundle --file="~/dotfiles/mac/Brewfile" -y
 
     - name: Check if CommandLineTools are installed
       stat:
