--- a/ansible/mac_arm64_setup.yml
+++ b/ansible/mac_arm64_setup.yml
@@ -5,7 +5,7 @@
 
   tasks:
     - name: Run brew bundle
-      shell: brew bundle --file="~/dotfiles/mac/Brewfile"
+      shell: brew bundle --file=$(curl -fsSL https://raw.githubusercontent.com/h0jicha/setup/main/Brewfile)
 
     - name: Check if CommandLineTools are installed
       stat:
