--- a/ansible/mac_arm64_setup.yml
+++ b/ansible/mac_arm64_setup.yml
@@ -51,7 +51,7 @@
 
     - name: asdf で Node.js をインストール
       shell: |
-        asdf plugin-add nodejs || true
+        asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git || true
         asdf install nodejs latest
         asdf global nodejs latest
       args:
