fix asdf set global

--- a/ansible/mac_arm64_setup.yml
+++ b/ansible/mac_arm64_setup.yml
@@ -53,7 +53,7 @@
       shell: |
         asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git || true
         asdf install nodejs latest
-        asdf global nodejs latest
+        asdf set -u nodejs latest
       args:
         executable: /bin/bash
 
